[package]
name = "mycraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
gamezap = {git = "https://github.com/GameHunter101/gamezap-lib"}
nalgebra = "0.32.3"
pollster = "0.3.0"
sdl2 = {git = "https://github.com/Rust-SDL2/rust-sdl2.git", features = ["raw-window-handle"]}
wgpu = "0.17.0"
